--- a/sign_up_form/styles/style.css
+++ b/sign_up_form/styles/style.css
@@ -2,8 +2,11 @@
     margin: 0;
     padding: 0;
 }
+
 body{
-    display: flex 
+    display: flex;
+    font-family: "Roboto", sans-serif;
+
 }
 
 .sidebar {
@@ -34,18 +37,24 @@ body{
     display: flex;
     height: 125px;
     margin: 1rem;
-    overflow-clip-margin: content-box;
     overflow: clip;
 }
 .sidebar .img-credit{
-    font-size: 12px;
+    font-size: .8rem;
     font-weight: 100;
     margin: 1rem;
 }
 
 h1{
-    font-size: 75px;
+    font-size: 100px;
+    font-family: "Norse-Bold", sans-serif;
 }
+
 a{
     color: white;
+}
+
+@font-face {
+    font-family: "Norse-Bold";
+    src: url("../fonts/Norse-Bold.otf");
 }
