--- a/sign_up_form/styles/style.css
+++ b/sign_up_form/styles/style.css
@@ -68,10 +68,11 @@ a{
 
 .form{
     background-color: white;
+    box-shadow: 0 0 10px #616161;
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    padding: 1rem 3rem;
+    padding: 1rem 3rem 1.5rem 3rem;
 }
 
 .form-row{
@@ -87,6 +88,10 @@ a{
 
 input{
     width: 15rem;
+}
+
+legend{
+    font-weight: bold;
 }
 
 
