--- a/sign_up_form/styles/style.css
+++ b/sign_up_form/styles/style.css
@@ -86,6 +86,25 @@ a{
     margin-top: 12px;
 }
 
+.form-end{
+    display: flex;
+    flex-direction: column;
+    margin-left: 3rem;
+    margin-top: 1.5rem;
+    gap: 1rem;
+}
+
+button{
+    width: 15rem;
+    color: white;
+    background-color: #596D48;
+    border-radius: 6px;
+    outline: none;
+    border: none;
+    padding: 10px 40px 12px 40px;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+}
+
 input{
     width: 15rem;
 }
@@ -94,6 +113,9 @@ legend{
     font-weight: bold;
 }
 
+.login a{
+    color: #596D48;
+}
 
 
 @font-face {
