--- a/sign_up_form/styles/style.css
+++ b/sign_up_form/styles/style.css
@@ -105,8 +105,16 @@ button{
     box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 }
 
+label{
+    font-weight: 500;
+    font-size: 0.9rem;
+}
+
 input{
     width: 15rem;
+    border: 1px solid #E5E7EB;
+    border-radius: 7px;
+    height: 1.5rem;
 }
 
 legend{
