--- a/sign_up_form/styles/style.css
+++ b/sign_up_form/styles/style.css
@@ -16,9 +16,9 @@ body{
     background-image: url("../images/background2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     width: 40%;
     height: 100vh;
-    background-position: center;
     color: white;
     overflow: hidden;
 }
@@ -64,14 +64,15 @@ a{
     font-weight: bold;
     margin-top: max(10px, min(calc(100vw * 0.2 - 100px), 100px));
     margin-bottom: max(10px, min(calc(100vw * 0.2 - 100px), 30px));
+    text-wrap: balance;
 }
 
 .form{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
     background-color: white;
     box-shadow: 0 0 10px #616161;
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
     padding: 1rem 3rem 1.5rem 3rem;
 }
 
@@ -99,8 +100,8 @@ button{
     color: white;
     background-color: #596D48;
     border-radius: 6px;
-    outline: none;
     border: none;
+    outline: none;
     padding: 10px 40px 12px 40px;
     box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 }
