--- a/admin_dashboard/styles/main.css
+++ b/admin_dashboard/styles/main.css
@@ -11,11 +11,11 @@ body{
 }
 
 .sidebar{
-    background-color: blue;
+    background-color: #0ea5e9;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
 }
 
 .main{
-    background-color: lightgray;
+    background-color: #e4e4e7;
 }
