--- a/admin_dashboard/styles/main.css
+++ b/admin_dashboard/styles/main.css
@@ -1,3 +1,5 @@
+@import "sidebar.css";
+
 body{
     display: grid;
     grid-template-columns: auto 1fr;
@@ -10,12 +12,12 @@ body{
     grid-column: 2 / 3;
 }
 
-.sidebar{
-    background-color: #0ea5e9;
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
-}
+
 
 .main{
     background-color: #e4e4e7;
+}
+
+li{
+    list-style: none;
 }
