--- a/admin_dashboard/styles/main.css
+++ b/admin_dashboard/styles/main.css
@@ -1,5 +1,10 @@
 @import "sidebar.css";
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     display: grid;
     grid-template-columns: auto 1fr;
