--- a/admin_dashboard/styles/sidebar.css
+++ b/admin_dashboard/styles/sidebar.css
@@ -1,12 +1,31 @@
 .sidebar{
+    display: grid;
     background-color: #0ea5e9;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    padding: 1rem;
+    grid-template-rows: auto 1fr auto;
 }
 
 .sidebar.nav{
     display: grid;
 
+}
+
+.sidebar-header{
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+    margin-right: .5rem;
+}
+
+.sidebar-header img{
+    filter: invert(100%);
+    width: 50px;
+    height: auto;
 }
 
 .sidebar-link{
@@ -17,6 +36,8 @@
 
 .sidebar-link img{
     filter: invert(100%);
+    width: 24px;
+    height: auto;
 }
 
 .sidebar-text{
