--- a/admin_dashboard/styles/main.css
+++ b/admin_dashboard/styles/main.css
@@ -5,11 +5,16 @@
     padding: 0;
 }
 
+:root{
+    --sidebar-width: 25rem;
+}
+
 body{
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: var(--sidebar-width) 1fr;
     grid-template-rows: auto 1fr;
     height: 100vh;
+    font-family: "Roboto", sans-serif;
 }
 
 .header{
