--- a/admin_dashboard/styles/sidebar.css
+++ b/admin_dashboard/styles/sidebar.css
@@ -1,45 +1,45 @@
 .sidebar{
     display: grid;
-    background-color: #0ea5e9;
+    background-color: #0896d8;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    padding: 1rem;
+    padding: 1.5rem;
     grid-template-rows: auto 1fr auto;
-}
-
-.sidebar.nav{
-    display: grid;
-
+    font-weight: 500;
+    font-size: 1.5rem;
+    color: white;
 }
 
 .sidebar-header{
     display: flex;
     align-items: center;
-    gap: .5rem;
-    font-size: 2rem;
-    font-weight: 500;
-    margin-bottom: 1rem;
-    margin-right: .5rem;
+    padding-left: .5rem;
+    gap: 1.2rem;
+    font-size: 2.5rem;
+    margin-bottom: 4rem;
 }
 
-.sidebar-header img{
-    filter: invert(100%);
-    width: 50px;
-    height: auto;
+.nav{
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    padding-left: 1.5rem;
 }
 
 .sidebar-link{
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
+    margin-bottom: 2rem;
 }
 
-.sidebar-link img{
+.sidebar img{
     filter: invert(100%);
-    width: 24px;
+    width: 30px;
     height: auto;
 }
 
-.sidebar-text{
-    color: white;
+.sidebar-header img{
+    width: 60px;
 }
+
