Updates search field css to shrink correctly while maintaining maximum width

--- a/admin_dashboard/styles/header.css
+++ b/admin_dashboard/styles/header.css
@@ -19,7 +19,7 @@
 }
 
 .search-field{
-    width: clamp(10rem, calc(1.5*var(--sidebar-width)), 40rem);
+    max-width: calc(1.5*var(--sidebar-width));
     background-color: #e4e4e7;
     border: none;
     border-radius: 1rem;
