Modifies styling for the rest of the header bar

--- a/admin_dashboard/styles/sidebar.css
+++ b/admin_dashboard/styles/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar{
     display: grid;
-    background-color: #0896d8;
+    background-color: var(--color-blue);
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     padding: 1rem;
