--- a/admin_dashboard/styles/header.css
+++ b/admin_dashboard/styles/header.css
@@ -1,17 +1,18 @@
 .header{
     display: grid;
     padding: 1rem;
-    gap: 1rem;
-
+    gap: 2rem;
+    margin-right: 2rem;
+    font-weight: 700;
 }
 
-.search-bar{
+.search-bar,
+.user-bar{
     display: grid;
     grid-template-columns: auto 1fr auto;
     margin-left: 1rem;
     gap: 1rem;
     align-items: center;
-
 }
 
 .header img{
@@ -33,4 +34,38 @@
     width: var(--sidebar-width);
     padding-right: 1rem;
     gap: 1rem;
+}
+
+.action-buttons{
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 1.5rem;
+}
+
+button{
+    background-color: var(--color-blue);
+    border: none;
+    border-radius: 2rem;
+    color: white;
+    padding: .8rem;
+    width: calc(.3*var(--sidebar-width));
+}
+
+.user-bar img{
+    width: 65px;
+    align-items: center;
+}
+
+.welcome{
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+    font-size: .8rem;
+}
+
+.greeting{
+    align-self: end;
+}
+.user-name{
+    align-self: start;
+    font-size: 1.3rem;
 }
