Shrinks top and bottom margins for user action buttons

--- a/admin_dashboard/styles/header.css
+++ b/admin_dashboard/styles/header.css
@@ -47,7 +47,7 @@ button{
     border: none;
     border-radius: 2rem;
     color: white;
-    padding: .8rem;
+    padding: .6rem 0;
     width: calc(.3*var(--sidebar-width));
 }
 
