--- a/admin_dashboard/styles/main.css
+++ b/admin_dashboard/styles/main.css
@@ -1,35 +1,37 @@
-@import "sidebar.css";
-@import "header.css";
-
-*{
-    margin: 0;
-    padding: 0;
-}
-
-:root{
-    --sidebar-width: 20rem;
-    --color-blue: #0896d8;
-}
-
-body{
+.content{
     display: grid;
-    grid-template-columns: var(--sidebar-width) 1fr;
-    grid-template-rows: auto 1fr;
-    height: 100vh;
-    font-family: "Roboto", sans-serif;
+    grid-template-columns: 2.5fr 1fr;
 }
 
-.header{
-    background-color: white;
-    grid-column: 2 / 3;
+.projects{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    padding: 1rem;
 }
 
-
-
-.main{
-    background-color: #e4e4e7;
+.card{
+    display: flex;
+    flex-direction: column;
+    background: white;
+    border-left: .5rem solid #eba621;
+    border-radius: .5rem;
+    padding: 1.5rem;
+    box-shadow: var(--card-box-shadow);
 }
 
-li{
-    list-style: none;
+.card p{
+    color: #999;
+    font-size: 0.8rem;
+    margin-top: auto;
+}
+
+.card-actions{
+    margin-top: 1.5rem;
+    align-self: flex-end;
+}
+
+.card img{
+    width: 25px;
+    opacity: .6;
 }
