--- a/admin_dashboard/styles/main.css
+++ b/admin_dashboard/styles/main.css
@@ -6,9 +6,13 @@
 .projects{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: .1fr repeat(3, 1fr);
     padding: 1rem;
-    gap: 1.5rem;
+}
+
+h3{
+    grid-column: 1 / 3;
+    padding-top: .8rem;
 }
 
 .card{
@@ -18,6 +22,7 @@
     border-left: .5rem solid #eba621;
     border-radius: .5rem;
     padding: 1.5rem;
+    margin: .8rem;
     box-shadow: var(--card-box-shadow);
 }
 
