Modifies the styling on the action buttons on the card

--- a/admin_dashboard/styles/header.css
+++ b/admin_dashboard/styles/header.css
@@ -6,6 +6,8 @@
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
     position: relative;
     z-index: 2;
+    background-color: white;
+    grid-column: 2 / 3;
 }
 
 .search-bar,
