--- a/admin_dashboard/styles/sidebar.css
+++ b/admin_dashboard/styles/sidebar.css
@@ -5,7 +5,7 @@
     grid-row: 1 / 3;
     padding: 1rem;
     grid-template-rows: auto 1fr auto;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 1.5rem;
     color: white;
 }
@@ -14,10 +14,8 @@
     display: flex;
     align-items: center;
     padding-left: .5rem;
-    gap: 1.2rem;
-    font-size: 2rem;
+    gap: .8rem;
     margin-bottom: 3rem;
-    font-weight: 500;
 }
 
 .nav{
@@ -30,17 +28,18 @@
 .sidebar-link{
     display: flex;
     align-items: center;
-    gap: 2rem;
-    margin-bottom: 1rem;
+    gap: 1.7rem;
+    margin-bottom: 1.2rem;
+    font-size: 1.3rem;
 }
 
 .sidebar img{
     filter: invert(100%);
-    width: 30px;
+    width: 24px;
     height: auto;
 }
 
 .sidebar-header img{
-    width: 50px;
+    width: 45px;
 }
 
