--- a/admin_dashboard/styles/main.css
+++ b/admin_dashboard/styles/main.css
@@ -30,7 +30,7 @@ h3{
     box-shadow: var(--card-box-shadow);
 }
 
-.card p{
+p{
     color: #6e6e6e;
     font-size: 0.9rem;
     font-weight: 400;
@@ -47,3 +47,37 @@ h3{
 .card img{
     width: 20px;
 }
+
+.announcements{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 0;
+    margin-right: 2rem;
+}
+
+.announcements h3{
+    margin-bottom: .8rem;
+}
+
+.news-list{
+    padding: 1.5rem;
+    background: white;
+    border-radius: .5rem;
+    box-shadow: var(--card-box-shadow);
+}
+.news-item{
+    display: flex;
+    flex-direction: column;
+    background: white;
+    border-bottom: 1px solid grey;
+    padding: 1rem 0;
+}
+
+.news-item:first-child{
+    padding-top: 0;
+}
+.news-item:last-child{
+    border-bottom: none;
+    padding-bottom: 0;
+}
+
