--- a/admin_dashboard/styles/main.css
+++ b/admin_dashboard/styles/main.css
@@ -30,8 +30,9 @@ h3{
     box-shadow: var(--card-box-shadow);
 }
 
-p{
-    color: #6e6e6e;
+p,
+.description{
+    color: #8b8b8b;
     font-size: 0.9rem;
     font-weight: 400;
     flex-grow: 1;
@@ -48,14 +49,14 @@ p{
     width: 20px;
 }
 
-.announcements{
+.main-sidebar{
     display: flex;
     flex-direction: column;
     padding: 1rem 0;
     margin-right: 2rem;
 }
 
-.announcements h3{
+.main-sidebar h3{
     margin-bottom: .8rem;
 }
 
@@ -69,15 +70,38 @@ p{
     display: flex;
     flex-direction: column;
     background: white;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid #b6b6b6;
     padding: 1rem 0;
 }
 
 .news-item:first-child{
     padding-top: 0;
 }
+
 .news-item:last-child{
     border-bottom: none;
     padding-bottom: 0;
+}
+
+.user-list{
+    padding: 1.5rem;
+    background: white;
+    border-radius: .5rem;
+    box-shadow: var(--card-box-shadow);
+}
+
+.user{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.user:last-child{
+    margin-bottom: 0;
+}
+
+.user img{
+    width: 50px;
 }
 
